infrastructure/kubernetes/base/gateway-api/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
  labels:
    name: nginx-gateway
