infrastructure/kubernetes/base/gateway-api/http-routes.yml
# Route api to API
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  hostnames:
    - api.aphiria.com
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
      sectionName: https-subdomains
  rules:
    - backendRefs:
        - name: api
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
# Route www to web
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
spec:
  hostnames:
    - www.aphiria.com
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
      sectionName: https-subdomains
  rules:
    - backendRefs:
        - name: web
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---

# Route grafana to Grafana
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.aphiria.com
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
      sectionName: https-subdomains
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---

# Redirect http to https for subdomains
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
      sectionName: http-subdomains
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443

---
# Redirect aphiria.com to www.aphiria.com
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www-redirect
spec:
  parentRefs:
    # Do this for both http and https
    - name: nginx-gateway
      sectionName: https-root
      namespace: nginx-gateway
    - name: nginx-gateway
      sectionName: http-root
      namespace: nginx-gateway
  hostnames:
    - aphiria.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: www.aphiria.com
            port: 443
